src/main/java/demoParser.java
// Generated from C:/Users/user/IdeaProjects/compiler/src/main/java\demo.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class demoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, BOOL=33, INT=34, STR=35, VOID=36, NULL=37, NEW=38, CLASS=39, 
		IF=40, ELSE=41, WHILE=42, FOR=43, RETURN=44, BREAK=45, CONTINUE=46, Bool=47, 
		ID=48, Int=49, String=50, COMMENT=51, BLOCK_COMMENT=52, WS=53;
	public static final int
		RULE_prog = 0, RULE_block = 1, RULE_funcdef = 2, RULE_clasdef = 3, RULE_classbody = 4, 
		RULE_clastat = 5, RULE_claconstr = 6, RULE_paralist = 7, RULE_para = 8, 
		RULE_stat = 9, RULE_exprlist = 10, RULE_methodcall = 11, RULE_creator = 12, 
		RULE_indexlist = 13, RULE_expr = 14, RULE_primary = 15, RULE_sif = 16, 
		RULE_swhile = 17, RULE_sfor = 18, RULE_jumpstat = 19, RULE_type = 20, 
		RULE_functype = 21, RULE_vartype = 22, RULE_arrtype = 23, RULE_varid = 24, 
		RULE_funcid = 25, RULE_clasid = 26;
	public static final String[] ruleNames = {
		"prog", "block", "funcdef", "clasdef", "classbody", "clastat", "claconstr", 
		"paralist", "para", "stat", "exprlist", "methodcall", "creator", "indexlist", 
		"expr", "primary", "sif", "swhile", "sfor", "jumpstat", "type", "functype", 
		"vartype", "arrtype", "varid", "funcid", "clasid"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'{'", "'}'", "','", "'='", "';'", "'['", "']'", "'.'", 
		"'++'", "'--'", "'!'", "'~'", "'-'", "'*'", "'/'", "'%'", "'+'", "'<<'", 
		"'>>'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'&'", "'^'", "'|'", 
		"'&&'", "'||'", "'bool'", "'int'", "'string'", "'void'", "'null'", "'new'", 
		"'class'", "'if'", "'else'", "'while'", "'for'", "'return'", "'break'", 
		"'continue'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "BOOL", "INT", "STR", 
		"VOID", "NULL", "NEW", "CLASS", "IF", "ELSE", "WHILE", "FOR", "RETURN", 
		"BREAK", "CONTINUE", "Bool", "ID", "Int", "String", "COMMENT", "BLOCK_COMMENT", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "demo.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public demoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54);
				block();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__6) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << BOOL) | (1L << INT) | (1L << STR) | (1L << VOID) | (1L << NULL) | (1L << NEW) | (1L << CLASS) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << RETURN) | (1L << BREAK) | (1L << CONTINUE) | (1L << Bool) | (1L << ID) | (1L << Int) | (1L << String))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	 
		public BlockContext() { }
		public void copyFrom(BlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Block_stateContext extends BlockContext {
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public Block_stateContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterBlock_state(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitBlock_state(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitBlock_state(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Block_funcdefContext extends BlockContext {
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public Block_funcdefContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterBlock_funcdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitBlock_funcdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitBlock_funcdef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Block_clasdefContext extends BlockContext {
		public ClasdefContext clasdef() {
			return getRuleContext(ClasdefContext.class,0);
		}
		public Block_clasdefContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterBlock_clasdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitBlock_clasdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitBlock_clasdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new Block_funcdefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				funcdef();
				}
				break;
			case 2:
				_localctx = new Block_clasdefContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				clasdef();
				}
				break;
			case 3:
				_localctx = new Block_stateContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				stat();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefContext extends ParserRuleContext {
		public FunctypeContext functype() {
			return getRuleContext(FunctypeContext.class,0);
		}
		public FuncidContext funcid() {
			return getRuleContext(FuncidContext.class,0);
		}
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public ParalistContext paralist() {
			return getRuleContext(ParalistContext.class,0);
		}
		public FuncdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterFuncdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitFuncdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitFuncdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncdefContext funcdef() throws RecognitionException {
		FuncdefContext _localctx = new FuncdefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			functype();
			setState(65);
			funcid();
			setState(66);
			match(T__0);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << STR) | (1L << ID))) != 0)) {
				{
				setState(67);
				paralist();
				}
			}

			setState(70);
			match(T__1);
			setState(71);
			stat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClasdefContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(demoParser.CLASS, 0); }
		public ClasidContext clasid() {
			return getRuleContext(ClasidContext.class,0);
		}
		public ClassbodyContext classbody() {
			return getRuleContext(ClassbodyContext.class,0);
		}
		public ClasdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clasdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterClasdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitClasdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitClasdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClasdefContext clasdef() throws RecognitionException {
		ClasdefContext _localctx = new ClasdefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_clasdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(CLASS);
			setState(74);
			clasid();
			setState(75);
			match(T__2);
			setState(76);
			classbody();
			setState(77);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassbodyContext extends ParserRuleContext {
		public List<ClastatContext> clastat() {
			return getRuleContexts(ClastatContext.class);
		}
		public ClastatContext clastat(int i) {
			return getRuleContext(ClastatContext.class,i);
		}
		public ClassbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterClassbody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitClassbody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitClassbody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassbodyContext classbody() throws RecognitionException {
		ClassbodyContext _localctx = new ClassbodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classbody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__6) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << BOOL) | (1L << INT) | (1L << STR) | (1L << VOID) | (1L << NULL) | (1L << NEW) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << RETURN) | (1L << BREAK) | (1L << CONTINUE) | (1L << Bool) | (1L << ID) | (1L << Int) | (1L << String))) != 0)) {
				{
				{
				setState(79);
				clastat();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClastatContext extends ParserRuleContext {
		public ClastatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clastat; }
	 
		public ClastatContext() { }
		public void copyFrom(ClastatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Class_funcdefContext extends ClastatContext {
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public Class_funcdefContext(ClastatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterClass_funcdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitClass_funcdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitClass_funcdef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Class_clacContext extends ClastatContext {
		public ClaconstrContext claconstr() {
			return getRuleContext(ClaconstrContext.class,0);
		}
		public Class_clacContext(ClastatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterClass_clac(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitClass_clac(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitClass_clac(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Class_statContext extends ClastatContext {
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public Class_statContext(ClastatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterClass_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitClass_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitClass_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClastatContext clastat() throws RecognitionException {
		ClastatContext _localctx = new ClastatContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_clastat);
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new Class_funcdefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				funcdef();
				}
				break;
			case 2:
				_localctx = new Class_statContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				stat();
				}
				break;
			case 3:
				_localctx = new Class_clacContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				claconstr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClaconstrContext extends ParserRuleContext {
		public ClasidContext clasid() {
			return getRuleContext(ClasidContext.class,0);
		}
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public ClaconstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_claconstr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterClaconstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitClaconstr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitClaconstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClaconstrContext claconstr() throws RecognitionException {
		ClaconstrContext _localctx = new ClaconstrContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_claconstr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			clasid();
			setState(91);
			match(T__0);
			setState(92);
			match(T__1);
			setState(93);
			stat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParalistContext extends ParserRuleContext {
		public List<ParaContext> para() {
			return getRuleContexts(ParaContext.class);
		}
		public ParaContext para(int i) {
			return getRuleContext(ParaContext.class,i);
		}
		public ParalistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paralist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterParalist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitParalist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitParalist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParalistContext paralist() throws RecognitionException {
		ParalistContext _localctx = new ParalistContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_paralist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			para();
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(96);
				match(T__4);
				setState(97);
				para();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParaContext extends ParserRuleContext {
		public ParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_para; }
	 
		public ParaContext() { }
		public void copyFrom(ParaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Para_varContext extends ParaContext {
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public VaridContext varid() {
			return getRuleContext(VaridContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Para_varContext(ParaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterPara_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitPara_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitPara_var(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Para_arrContext extends ParaContext {
		public ArrtypeContext arrtype() {
			return getRuleContext(ArrtypeContext.class,0);
		}
		public VaridContext varid() {
			return getRuleContext(VaridContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Para_arrContext(ParaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).enterPara_arr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof demoListener ) ((demoListener)listener).exitPara_arr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof demoVisitor ) return ((demoVisitor<? extends T>)visitor).visitPara_arr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParaContext para() throws RecognitionException {
		ParaContext _localctx = new ParaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_para);
		int _la;
		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new Para_varContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				vartype();
				setState(104);
				varid();
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(105);
					match(T__5);
					setState(106);
					expr(0);
					}
				}

				}
				break;
			case 2:
				_localctx = new Para_arrContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				arrtype();
				setState(110);
				varid();
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(111);
					match(T__5);
					setState(112);
					expr(0);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
